--- a/style.css
+++ b/style.css
@@ -33,6 +33,7 @@ body {
   background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  /* Comment */
 }
 
 img {
