--- a/style.css
+++ b/style.css
@@ -125,9 +125,10 @@ li {
   width: var(--size);
   line-height: var(--size);
   text-align: center;
-  border-radius: 50px;
+  border-radius: 50%;
   margin-right: 1em;
   font-size: 1.5em;
+  overflow: hidden;
 }
 
 .social-media__item a {
